<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ditto.tutorial.ui.TutorialViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorialroot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_card_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_card_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".91" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_card_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{()->viewModel.onClickCalibration()}"
            app:cardBackgroundColor="@color/tutorialcardColor"
            app:layout_constraintEnd_toStartOf="@+id/card_right"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".60"
            app:layout_constraintStart_toEndOf="@+id/card_left"
            app:layout_constraintTop_toBottomOf="@+id/guide_card_top"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".24">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_center"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/onboard_calib"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/round_image_two"
                    android:layout_width="@dimen/roundimage"
                    android:layout_height="@dimen/roundimage"
                    android:src="@drawable/ic_round_two"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.66" />

                <LinearLayout
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="@dimen/dimen_0"
                    android:layout_marginStart="@dimen/size_10sp"
                    android:paddingTop="@dimen/size_10sp"
                    android:layout_marginEnd="@dimen/size_10sp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calibration"
                        android:textAppearance="@style/text_desc"
                        android:textSize="@dimen/size_14px"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/calibration_dec"
                        android:textAppearance="@style/text_desc"
                        android:textSize="@dimen/tile_text" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{()->viewModel.onClickBeamsetup()}"
            app:cardBackgroundColor="@color/tutorialcardColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".60"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guide_card_one"
            app:layout_constraintTop_toBottomOf="@+id/guide_card_top"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".24">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_left"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/onboard_beam"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/round_image"
                    android:layout_width="@dimen/roundimage"
                    android:layout_height="@dimen/roundimage"
                    android:src="@drawable/ic_round_one"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.66" />


                <LinearLayout
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="@dimen/dimen_0"
                    android:layout_marginStart="@dimen/size_10sp"
                    android:paddingTop="@dimen/size_10sp"
                    android:layout_marginEnd="@dimen/size_10sp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_left">

                    <TextView
                        android:id="@+id/text_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beamsetup"
                        android:textAppearance="@style/text_desc"
                        android:textSize="@dimen/size_14px"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/beamsetup_dec"
                        android:textAppearance="@style/text_desc"
                        android:textSize="@dimen/tile_text" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{()->viewModel.onClickHowto()}"
            app:cardBackgroundColor="@color/tutorialcardColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_card_three"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".60"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/guide_card_top"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".24">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_right"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/onboard_howto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/round_image_three"
                    android:layout_width="@dimen/roundimage"
                    android:layout_height="@dimen/roundimage"
                    android:src="@drawable/ic_round_three"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.66" />

                <LinearLayout
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="@dimen/dimen_0"
                    android:layout_marginStart="@dimen/size_10sp"
                    android:paddingTop="@dimen/size_10sp"
                    android:layout_marginEnd="@dimen/size_10sp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_right">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howto"
                        android:textAppearance="@style/text_desc"
                        android:textSize="@dimen/size_14px"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/howto_dec"
                        android:textAppearance="@style/text_desc"
                        android:textSize="@dimen/tile_text" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_header"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/card_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>